# francium

./: .gitignore  Cargo.toml  Makefile  README.md  TODO  aarch64-unknown-francium-kernel.json  aarch64-unknown-francium-user.json  bochsrc.txt
cesium/: Cargo.toml
cesium/.cargo/: config.toml
cesium/src/: bleh.rs  main.rs  syscalls.s
crates/francium_aarch64/: Cargo.toml
crates/francium_aarch64/src/: lib.rs  page_table.rs  sys_regs.rs
crates/francium_acpi/: Cargo.toml
crates/francium_acpi/src/: lib.rs
crates/francium_common/: Cargo.toml
crates/francium_common/src/: align.rs  lib.rs  types.rs
crates/francium_drivers/: Cargo.toml
crates/francium_drivers/src/: arm_gicv2.rs  bcm_interrupt.rs  lib.rs  pc_io_apic.rs  pc_local_apic.rs  pc_uart.rs  pic_interrupt_controller.rs  pit_timer.rs  pl011_uart.rs  print.rs
crates/francium_mmu/: Cargo.toml
crates/francium_mmu/src/: lib.rs
crates/francium_x86/: Cargo.toml
crates/francium_x86/src/: cache.rs  context.rs  cpuid.rs  gdt.rs  idt.rs  lib.rs  mmu.rs  msr.rs  page_table.rs  syscall.rs
docs/: memory_map.txt
francium/: Cargo.toml  aarch64-unknown-francium.json  build.rs  link.x  link_pc.x  link_raspi4.x  link_virt.x
francium/.cargo/: config.toml
francium/pc_bootloader/: Cargo.toml
francium/pc_bootloader/src/: main.rs
francium/src/: align.rs  bump_allocator.rs  constants.rs  entry.s  handle.rs  handle_table.rs  init.rs  kernel_entry.s  lib.rs  main.rs  main_pc.rs  main_raspi4.rs  main_virt.rs  memory.rs  memory.s  mmu.rs  panic.rs  per_cpu.rs  phys_allocator.rs  print.rs  process.rs  scheduler.rs  stub.s  stub_raspi4.s  stub_virt.s  timer.rs  uart.rs  waitable.rs
francium/src/acpi/: mod.rs
francium/src/arch/: mod.rs
francium/src/arch/aarch64/: arch_registers.rs  arch_timer.rs  arch_timer.s  cache.rs  context.rs  context.s  gicv2.rs  interrupt.rs  interrupt.s  misc.s  mmu.rs  mod.rs  per_cpu.rs  scheduler.s  svc_wrappers.rs
francium/src/arch/aarch64/asm/: arch_timer.s  context.s  interrupt.s  kernel_entry.s  memory.s  misc.s  scheduler.s  stub.s  stub_raspi4.s  stub_virt.s
francium/src/arch/x86_64/: cache.rs  context.rs  gdt.rs  idt.rs  info.rs  interrupt_handlers.rs  io_port.rs  mmu.rs  mod.rs  msr.rs  per_cpu.rs  svc_wrappers.rs  syscall.rs
francium/src/arch/x86_64/asm/: context.s  interrupt.s  misc.s  scheduler.s  stack.s  stub.s  trampoline.s
francium/src/drivers/: mod.rs  pc_uart.rs  pic_interrupt_controller.rs  pit_timer.rs  pl011_uart.rs
francium/src/log_sink/: early_framebuffer.rs  font.rs  framebuffer_log_sink.rs  mod.rs  print_log_sink.rs
francium/src/platform/: mod.rs  pc.rs  raspi3.rs  raspi4.rs  virt.rs
francium/src/subscriber/: mod.rs
francium/src/svc/: debug_output.rs  event.rs  exit_process.rs  futex.rs  get_system_info.rs  get_system_tick.rs  handle.rs  ipc.rs  memory.rs  mod.rs  ports.rs  process.rs  svc_break.rs  thread.rs  wait.rs
francium_pc/: Cargo.toml  build.rs
francium_pc/src/: main.rs
francium_pc_bootimg/: Cargo.toml
francium_pc_bootimg/src/: main.rs
francium_raspi3/: Cargo.toml  build.rs
francium_raspi3/src/: main.rs
francium_raspi4/: Cargo.toml  build.rs
francium_raspi4/src/: main.rs
francium_virt/: Cargo.toml  build.rs
francium_virt/src/: main.rs
hydrogen/: Cargo.toml
hydrogen/src/: main.rs
ipc-gen/: Cargo.toml
ipc-gen-buildtime/: Cargo.toml
ipc-gen-buildtime/src/: lib.rs
ipc-gen/src/: lib.rs
ipc_definitions/: fs.toml  pcie.toml  sm.toml
libcommon/: Cargo.toml
libcommon/src/: constants.rs  handle.rs  ipc.rs  lib.rs  os_error.rs  system_info.rs
libprocess/: Cargo.toml  build.rs
libprocess/src/: allocator.rs  ipc_client.rs  ipc_common.rs  ipc_server.rs  lang_items.rs  lib.rs  os_error.rs  print.rs  syscalls.rs  syscalls.s  syscalls_emulated.rs  syscalls_native.rs
libprocess/src/asm/: aarch64_syscalls.s  x86_64_syscalls.s
libprocess/src/ipc/: fs.rs  message.rs  mod.rs  pcie.rs  sm.rs
modules/disp/: Cargo.toml  build.rs  splash.rgb
modules/disp/src/: bochs.rs  main.rs  platform.rs  raspi.rs
modules/fs/: Cargo.toml  build.rs
modules/fs/src/: block.rs  block_adapter.rs  block_nvme.rs  block_virtio.rs  fs_worker.rs  lang_items.rs  main.rs  virtio_pci.rs
modules/loader/: Cargo.toml
modules/net/: Cargo.toml
modules/net/src/: main.rs
modules/pcie/: Cargo.toml  build.rs
modules/pcie/src/: ecam.rs  interrupt_map.rs  main.rs  pcie.rs  pcie_acpi.rs  pcie_dt.rs
modules/ps2/: Cargo.toml
modules/ps2/src/: main.rs  ps2.rs
modules/sm/: Cargo.toml  build.rs
modules/sm/src/: main.rs
modules/test/: Cargo.toml
modules/test/.cargo/: config.toml
modules/test/src/: bochs.rs  main.rs
targets/: aarch64-unknown-francium-kernel.json  aarch64-unknown-francium-user.json  link_pc.x  link_raspi3.x  link_virt.x  user.x  x86_64-unknown-francium-kernel.json  x86_64-unknown-francium-user.json
