[workspace]
members = [
  "francium",
  "francium/pc_bootloader",
  "libprocess",
  "libcommon",
  "modules/fs",
  "modules/sm",
  "modules/test",
  "modules/pcie",
  "ipc-gen-buildtime",
  "crates/francium_common",
  "crates/francium_drivers"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
overflow-checks = true

[patch.crates-io]
libc = { path = "../libc" }
