[workspace]
resolver = "2"
members = [
  "francium",
  "francium_pc",
  "francium_virt",
  "francium_raspi3",
  "francium_raspi4",
  "francium_pc_bootimg",
  "libprocess",
  "libcommon",
  "modules/fs",
  "modules/sm",
  "modules/test",
  "modules/pcie",
  "modules/disp",
  "modules/ps2",
  "modules/net",
  "modules/loader",
  "ipc-gen-buildtime",
  "crates/francium_common",
  "crates/francium_drivers",
  "crates/francium_x86",
  "crates/francium_aarch64"
]
rust-version = "1.67.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
overflow-checks = true
opt-level = 3

[patch.crates-io]
libc = { git = "https://github.com/francium-os/rust-libc.git" }
getrandom = { git = "https://github.com/francium-os/rust-crate-getrandom.git" }
