[package]
name = "francium"
version = "0.1.0"
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"bitflags" = "1.2.1"
elf_rs = "0.1.3"
lazy_static = { version = "1.4.0", features=["spin_no_std"]}
smallvec = "1.6.1"
spin = "0.9.0"
bootloader = { version = "0.10.13", optional = true }

[build-dependencies]

[features]
platform_pc = ["bootloader"]
platform_virt = []
platform_raspi4 = []

[[bin]]
name = "francium_virt"
required-features = ["platform_virt"]
path = "src/main_virt.rs"

[[bin]]
name = "francium_raspi4"
required-features = ["platform_raspi4"]
path = "src/main_raspi4.rs"

[[bin]]
name = "francium_pc"
required-features = ["platform_pc"]
path = "src/main_pc.rs"

[package.metadata.bootloader]
map-physical-memory = true
physical-memory-offset = "0xffff_f000_0000_0000"
