[package]
name = "francium_kernel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../libcommon"}
"bitflags" = "1.2.1"
elf_rs = "0.3.0"
lazy_static = { version = "1.4.0", features=["spin_no_std"]}
smallvec = { version = "1.6.1", features = ["const_new"] }
spin = "0.9.0"
atomic_enum = "0.2.0"
hashbrown = "0.13"
intrusive-collections = "0.9.4"
tracing = { version = "0.1.37", default-features = false, features = ["log"] }
log = { version = "*", default-features = false }
num-traits = { version = "0.2", default-features = false }

francium_common = { path = "../crates/francium_common" }
francium_drivers = { path = "../crates/francium_drivers" }
francium_mmu = { path = "../crates/francium_mmu" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
francium_x86 = { path = "../crates/francium_x86" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
francium_aarch64 = { path = "../crates/francium_aarch64" }
tock-registers = "0.8.1"
aarch64-cpu = "9.2.0"

[build-dependencies]

[features]
platform_pc = []
platform_virt = []
platform_raspi3 = []
platform_raspi4 = []
