[package]
name = "libprocess"
version = "0.1.0"
authors = ["Ezekiel Bethel <zek@9net.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"process" = { path = "../libprocess" }

[build-dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
#debug = true
overflow-checks = true
