[package]
name = "process"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../libcommon"}
ipc-gen = { path = "../ipc-gen"}
smallvec = "1.9.0"
simple-chunk-allocator = "0.1.5"
spin = "0.9.4"

[build-dependencies]
