[package]
name = "process"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../libcommon"}
smallvec = "1.9.0"
spin = "0.9.4"
async-trait = "0.1.57"
tokio = { version = "1.21.2", features = ["rt","rt-multi-thread", "macros"] }

[build-dependencies]
"ipc-gen-buildtime" = { path = "../ipc-gen-buildtime" }
