[package]
name = "francium_acpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"francium_common" = { path = "../francium_common" }
"francium_mmu" = { path = "../francium_mmu" }
log = { version = "0.4.17", default-features = false }
