[package]
name = "disp"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"process" = { path = "../../libprocess" }
"common" = { path = "../../libcommon" }
"francium_common" = { path = "../../crates/francium_common" }
num-traits = { version = "0.2", default-features = false }
num_enum = { version = "0.5.7", default-features = false }

[build-dependencies]
