[package]
name = "fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
pasts = { version = "0.12.0", features = ["no-std"] }
"process" = { path = "../../libprocess" }

[build-dependencies]
"ipc-gen-buildtime" = { path = "../../ipc-gen-buildtime" }
