[package]
name = "fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
futures = "0.3.25"
"process" = { path = "../../libprocess" }

[build-dependencies]
"ipc-gen-buildtime" = { path = "../../ipc-gen-buildtime" }
