[package]
name = "fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "macros"] }
"process" = { path = "../../libprocess" }
tock-registers = "0.8.1"
"francium_common" = { path = "../../crates/francium_common" }
fatfs = { git = "https://github.com/francium-os/rust-fatfs.git" }
gpt = "3.0.0"

[build-dependencies]
"ipc-gen-buildtime" = { path = "../../ipc-gen-buildtime" }
