[package]
name = "pcie"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-broadcast = "0.4.1"
async-trait = "0.1.57"
hashbrown = "0.12.3"
"process" = { path = "../../libprocess" }
"common" = { path = "../../libcommon" }
"francium_common" = { path = "../../crates/francium_common" }
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "macros"] }
acpi = { git = "https://github.com/rust-osdev/acpi.git", branch = "main" }
smallvec = "1.10.0"

[build-dependencies]
"ipc-gen-buildtime" = { path = "../../ipc-gen-buildtime" }
