[package]
name = "ps2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"process" = { path = "../../libprocess" }
"common" = { path = "../../libcommon" }
"francium_common" = { path = "../../crates/francium_common" }
"francium_x86" = { path = "../../crates/francium_x86" }
"bitflags" = "1.2.1"

[build-dependencies]