[package]
name = "ps2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"process" = { path = "../../libprocess" }
"francium_common" = { path = "../../crates/francium_common" }
"bitflags" = "1.2.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
"francium_x86" = { path = "../../crates/francium_x86" }

[build-dependencies]